--- a/components/jade/game-board-5.jade
+++ b/components/jade/game-board-5.jade
@@ -1,4 +1,5 @@
 doctype xml
+<!DOCTYPE board SYSTEM "board.dtd">
 
 board(state='5')
   play(val='1')
@@ -127,20 +128,20 @@ board(state='5')
       
       result(des="Runner on first out stealing 2nd; A-C PO-SS; other holds" outs="1" runs="0" state="4" type="action")/
     
-  play(val="")
-    fielding(val="3")
-      result(des="" outs="" runs="" state="" type="")/
-      conditions()
-        result(des="" outs="" runs="" state="" type="")/
-      
-    
-    fielding(val="2")
-      result(des="" outs="" runs="" state="" type="")/
-      conditions()
-        result(des="" outs="" runs="" state="" type="")/
-      
-    
-    fielding(val="1")
-      result(des="" outs="" runs="" state="" type="")/
-      conditions()
-        result(des="" outs="" runs="" state="" type="")/
+//  play(val="")
+//    fielding(val="3")
+//      result(des="" outs="" runs="" state="" type="")/
+//      conditions()
+//        result(des="" outs="" runs="" state="" type="")/
+//      
+//    
+//    fielding(val="2")
+//      result(des="" outs="" runs="" state="" type="")/
+//      conditions()
+//        result(des="" outs="" runs="" state="" type="")/
+//      
+//    
+//    fielding(val="1")
+//      result(des="" outs="" runs="" state="" type="")/
+//      conditions()
+//        result(des="" outs="" runs="" state="" type="")/
