--- a/components/jade/game-board-5.jade
+++ b/components/jade/game-board-5.jade
@@ -2,146 +2,105 @@ doctype xml
 <!DOCTYPE board SYSTEM "board.dtd">
 
 board(state='5')
+
   play(val='1')
-    result(des="HOMERUN over left field fence" outs="0" runs="3" state="0" type="atbat" batter="to_home" on_1b="to_home" on_3b="to_home" event="event" charge_ab="t")/
+    result(des="HOMERUN over left field fence" event="HR/F7")/
 
-  play(val="9")
-    result(des="SINGLE over short; one runner scores; other to second" outs="0" runs="1" state="3" type="atbat" batter="to_1b" on_1b="to_2b" on_3b="to_home" event="event" charge_ab="t")/
+  play(val='9')
+    result(des="SINGLE over short; one runner scores; other to second" event="s")/
     conditions(two_outs="t")
-      result(des="SINGLE over short; one runner scores; other to third" outs="0" runs="1" state="5" type="atbat" batter="to_1b" on_1b="to_3b" on_3b="to_home" event="event" charge_ab="t")/
-
-    conditions(against="c")
-      result(des="SINGLE over short; one runner scores; other to second" outs="0" runs="1" state="3" type="atbat" batter="to_1b" on_1b="to_2b" on_3b="to_home" event="event" charge_ab="t")/
-    conditions(against="c" two_outs="t")
-      result(des="SINGLE over short; one runner scores; other to third" outs="0" runs="1" state="5" type="atbat" batter="to_1b" on_1b="to_3b" on_3b="to_home" event="event" charge_ab="t")/
-
-    conditions(against="b") 
-      result(des="SINGLE over short; one runner scores; other to second" outs="0" runs="1" state="3" type="atbat" batter="to_1b" on_1b="to_2b" on_3b="to_home" event="event" charge_ab="t")/
-    conditions(against="b" two_outs="t")
-      result(des="SINGLE over short; one runner scores; other to third" outs="0" runs="1" state="5" type="atbat" batter="to_1b" on_1b="to_3b" on_3b="to_home" event="event" charge_ab="t")/
-
-    conditions(against="a") 
-      result(des="Fly out; one runner scores; PO-LF" outs="1" runs="1" state="1" type="atbat" batter="out" on_1b="hold" on_3b="to_home" event="event" charge_ab="t")/
-    conditions(against="a" two_outs="t")
-      result(des="Strikeout; PO-C" outs="1" runs="0" state="5" type="atbat" batter="out" on_1b="hold" on_3b="hold" event="event" charge_ab="t")
+      result(des="SINGLE over short; one runner scores; other to third" event="S7/L6.3-H;1-3")/
 
   play(val="12")
     fielding(val="3")
       conditions(infield="c")
-        result(des="Safe at first; F.C.; runner out at home; other to second; A-2B PO-C" outs="1" runs="0" state="3" type="atbat" batter="to_1b" on_1b="to_2b" on_3b="out_at_home" event="event" charge_ab="t")/
+        result(des="Safe at first; F.C.; runner out at home; other to second; A-2B PO-C" event="FC4/G4.3XH(42);1-2")/
       
       conditions(infield="d" zero_outs="t")
-        result(des="Double play; A-1B PO-SS A-SS PO-1B; runner on third scores" outs="2" runs="1" state="0" type="atbat" batter="out_at_1b" on_1b="out_at_2b" on_3b="to_home" event="event" charge_ab="t")/
+        result(des="Double play; A-1B PO-SS A-SS PO-1B; runner on third scores" event="36(1)63/GDP/G3")/
       
       conditions(infield="d" zero_outs="f")
-        result(des="Double play; A-1B PO-SS A-SS PO-1B" outs="2" runs="0" state="4" type="atbat" batter="out_at_1b" on_1b="out_at_2b" on_3b="hold" event="event" charge_ab="t")/
+        result(des="Double play; A-1B PO-SS A-SS PO-1B" event="36(1)63/GDP/G3")/
       
       conditions(infield="d" two_outs="t")
-        result(des="Groundout; A-1B PO-P" outs="1" runs="0" state="6" type="atbat" batter="out_at_1b" on_1b="inning_over" on_3b="inning_over" event="event" charge_ab="t")/
+        result(des="Groundout; A-1B PO-P" event="31/G3")/
       
     
     fielding(val="2")
       conditions(infield="c")
-        result(des="Safe at first; F.C.; runner out at home; other to second; A-2B PO-C" outs="1" runs="0" state="3" type="atbat" batter="to_1b" on_1b="to_2b" on_3b="out_at_home" event="event" charge_ab="t")/
+        result(des="Safe at first; F.C.; runner out at home; other to second; A-2B PO-C" event="FC4/G4.3XH(42);1-2")/
       
       conditions(infield="d" zero_outs="t")
-        result(des="Double play; A-1B PO-SS A-SS PO-1B; runner on third scores" outs="2" runs="1" state="0" type="atbat" batter="out_at_1b" on_1b="out_at_2b" on_3b="to_home" event="event" charge_ab="t")/
+        result(des="Double play; A-1B PO-SS A-SS PO-1B; runner on third scores" event="36(1)3/GDP/G3.3-H")/
       
       conditions(infield="d" zero_outs="f")
-        result(des="Double play; A-1B PO-SS A-SS PO-1B" outs="2" runs="0" state="4" type="atbat" batter="out_at_1b" on_1b="out_at_2b" on_3b="hold" event="event" charge_ab="t")/
+        result(des="Double play; A-1B PO-SS A-SS PO-1B" event="36(1)3/GDP/G3")/
       
       conditions(infield="d" two_outs="t")
-        result(des="Groundout; A-1B PO-P" outs="1" runs="0" state="6" type="atbat" batter="out_at_1b" on_1b="to_2b" on_3b="hold" event="event" charge_ab="t")/
+        result(des="Groundout; A-1B PO-P" event="31/G3")/
       
     
     fielding(val="1")
       conditions(infield="c")
-        result(des="Safe at first; F.C.; runner out at home; other to second; A-2B PO-C" outs="1" runs="0" state="3" type="atbat" batter="to_1b" on_1b="to_2b" on_3b="out_at_home" event="event" charge_ab="t")/
+        result(des="Safe at first; F.C.; runner out at home; other to second; A-2B PO-C" event="FC4/G4.3XH(42);1-2")/
       
       conditions(infield="d" zero_outs="t")
-        result(des="Double play; A-2B PO-SS A-SS PO-1B; runner on third scores" outs="2" runs="1" state="0" type="atbat" batter="out_at_1b" on_1b="out_at_2b" on_3b="to_home" event="event" charge_ab="t")/
+        result(des="Double play; A-2B PO-SS A-SS PO-1B; runner on third scores" event="46(1)3/GCP/G4.3-H")/
       
       conditions(infield="d" zero_outs="f")
-        result(des="Double play; A-1B PO-SS A-SS PO-1B" outs="2" runs="0" state="4" type="atbat" batter="out_at_1b" on_1b="out_at_2b" on_3b="hold" event="event" charge_ab="t" )/
+        result(des="Double play; A-1B PO-SS A-SS PO-1B" event="36(1)3/GDP/G3")/
       
       conditions(infield="d" two_outs="t")
-        result(des="Groundout; A-1B PO-P" outs="1" runs="0" state="6" type="atbat" batter="out_at_1b" on_1b="inning_over" on_3b="inning_over" event="event" charge_ab="t")/
+        result(des="Groundout; A-1B PO-P" event="31/G3")/
 
-  play(val="14")
-    fielding(val="1")
-      result(des="Base on balls, filling the bases" outs="0" runs="0" state="7" type="atbat" batter="to_1b" on_1b="to_2b" on_3b="hold" event="event" charge_ab="f")/
-    
-    fielding(val="2")
-      result(des="Base on balls, filling the bases" outs="0" runs="0" state="7" type="atbat" batter="to_1b" on_1b="to_2b" on_3b="hold" event="event" charge_ab="f")/
-    
-    fielding(val="3")
-      result(des="Base on balls, filling the bases" outs="0" runs="0" state="7" type="atbat" batter="to_1b" on_1b="to_2b" on_3b="hold" event="event" charge_ab="f")/
-    
   play(val="21")
     fielding(val="3")
       conditions(two_outs="t")
-        result(des="Strikeout; catcher drops third strike; one runner scores; other to second; batter to first; passed ball" outs="0" runs="1" state="3" type="atbat" batter="to_1b" on_1b="to_2b" on_3b="to_home" event="event" charge_ab="t")/
+        result(des="Strikeout; catcher drops third strike; one runner scores; other to second; batter to first; passed ball" event="K+PB.3-H;1-2;B-1")/
       
-      result(des="Strikeout; PO-C" outs="1" runs="0" state="5" type="atbat" batter="out" on_1b="hold" on_3b="hold" event="event" charge_ab="t")/
+      result(des="Strikeout; PO-C" event="K")/
 
     fielding(val="2")
       conditions(two_outs="t")
-        result(des="Strikeout; catcher drops third strike; batter safe at first, filling the bases; passed ball" outs="0" runs="0" state="7" type="atbat" batter="to_1b" on_1b="to_2b" on_3b="hold" event="event" charge_ab="t")/
+        result(des="Strikeout; catcher drops third strike; batter safe at first, filling the bases; passed ball" event="K+PB;1-2;B-1")/
       
-      result(des="Strikeout; PO-C" outs="1" runs="0" state="5" type="atbat" batter="out" on_1b="hold" on_3b="hold" event="event" charge_ab="t")/
+      result(des="Strikeout; PO-C" event="K")/
 
     fielding(val="1")
-      result(des="Ball; catcher throws wild to third; one runner scores; other to second; E-C" outs="0" runs="1" state="2" type="action" batter="atbat" on_1b="to_2b" on_3b="to_home" event="event" charge_ab="na")/
+      result(des="Ball; catcher throws wild to third; one runner scores; other to second; E-C" pitch="B" event="PO3(E2/TH).3-H(NR)(UR)")/
     
   play(val="29")
     fielding(val="3")
-      result(des="Out at first; runner to second; other holds" outs="1" runs="0" state="6" type="atbat" batter="out_at_1b" on_1b="to_2b" on_3b="hold" event="event" charge_ab="t")/
+      result(des="Out at first; runner to second; other holds; A-P PO-1B" event="13/G1.1-2")/
       conditions(p_sym="x")
-        result(des="Strikeout; PO-C" outs="1" runs="0" state="5" type="atbat" batter="out" on_1b="hold" on_3b="hold" event="event" charge_ab="t")/
+        result(des="Strikeout; PO-C" event="K")/
     
     fielding(val="2")
-      result(des="Out at first; runner to second; other holds; A-P PO-1B" outs="1" runs="0" state="6" type="atbat" batter="out_at_1b" on_1b="to_2b" on_3b="hold" event="event" charge_ab="t")/
+      result(des="Out at first; runner to second; other holds; A-P PO-1B" event="13/G1.1-2")/
       conditions(p_sym="x")
-        result(des="Strikeout; PO-C" outs="1" runs="0" state="5" type="atbat" batter="out" on_1b="hold" on_3b="hold" event="event" charge_ab="t")/
+        result(des="Strikeout; PO-C" event="K")/
     
     fielding(val="1")
-      result(des="Out at first; runner to second; other holds; A-P PO-1B" outs="1" runs="0" state="6" type="atbat" batter="out_at_1b" on_1b="to_2b" on_3b="hold" event="event" charge_ab="t")/
+      result(des="Out at first; runner to second; other holds; A-P PO-1B" event="13/G1.1-2")/
       conditions(p_sym="x")
-        result(des="Strikeout; PO-C" outs="1" runs="0" state="5" type="atbat" batter="out" on_1b="hold" on_3b="hold" event="event" charge_ab="t")/
+        result(des="Strikeout; PO-C" event="K")/
 
   play(val="37")
     fielding(val="3")
       conditions(on_1b_speed="s")
-        result(des="Runner on first holds" outs="0" runs="0" state="5" type="action" batter="atbat" on_1b="hold" on_3b="hold" weird="t" event="event" charge_ab="na")/
+        result(des="Runner on first holds" pitch="K" event=".1-1")/
       
-      result(des="Runner on first steals second; other holds third" outs="0" runs="0" state="6" type="action" batter="atbat" on_1b="to_2b" on_3b="hold" event="event" charge_ab="na")/
+      result(des="Runner on first steals second; other holds third" event="SB2.3-3")/
     
     fielding(val="2")
       conditions(two_outs="t")
-        result(des="Runner on first out stealing 2nd; A-C PO-SS" outs="1" runs="0" state="4" type="action" event="caught_stealing_2b" batter="atbat" on_1b="out_at_2b" on_3b="inning_over" charge_ab="na")/
+        result(des="Runner on first out stealing 2nd; A-C PO-SS" event="CS2(26)")/
       
-      result(des="Runner on first out stealing 2nd; A-C PO-SS; other scores" outs="1" runs="1" state="0" type="action" event="caught_stealing_2b" batter="atbat" on_1b="out_at_2b" on_3b="to_home" charge_ab="na")/
+      result(des="Runner on first out stealing 2nd; A-C PO-SS; other scores" event="CS2(26)")/
 
     fielding(val="1")
       conditions(two_outs="t")
-        result(des="Runner on first out stealing 2nd" outs="1" runs="0" state="4" type="action" event="caught_stealing_2b" batter="atbat" on_1b="out_at_2b" on_3b="inning_over" charge_ab="na")/
+        result(des="Runner on first out stealing 2nd; A-C PO-SS" event="CS2(26)")/
       
-      result(des="Runner on first out stealing 2nd; A-C PO-SS; other holds" outs="1" runs="0" state="4" type="action" event="caught_stealing_2b" batter="atbat" on_1b="out_at_2b" on_3b="hold" charge_ab="na")/
+      result(des="Runner on first out stealing 2nd; A-C PO-SS; other holds" event="CS2(26)")/
     
-//  play(val="")
-//    fielding(val="3")
-//      result(des="" outs="" runs="" state="" type="")/
-//      conditions()
-//        result(des="" outs="" runs="" state="" type="")/
-//      
-//    
-//    fielding(val="2")
-//      result(des="" outs="" runs="" state="" type="")/
-//      conditions()
-//        result(des="" outs="" runs="" state="" type="")/
-//      
-//    
-//    fielding(val="1")
-//      result(des="" outs="" runs="" state="" type="")/
-//      conditions()
-//        result(des="" outs="" runs="" state="" type="")/
